# Chess-Engine

./: .gitignore  BOARD_OPTIMIZATIONS.md  CMakeLists.txt  LICHESS_DEPLOYMENT.md  Makefile  OPTIMIZATION_NOTES.md  README.md  TESTING.md  UCI_BUG_FIX.md  benchmark.cpp  gui.py  main.cpp  self_play_test.cpp  simple_perft.cpp  test_vs_stockfish.py  uci_engine.cpp  web_gui.html  web_server.py
src/: board.cpp  board.h  cli_main.cpp  eval.cpp  eval.h  main.cpp  moveGenerator.cpp  moveGenerator.h  moveOrdering.h  pieceSquareTables.h  quiescence.h  search.cpp  search.h  transposition.h  types.h  utils.cpp  utils.h
tests/: standard.epd  test_all_perfts.cpp  test_movegenerator.cpp  test_perft.cpp
